
/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.sabot.exec.store.easy.proto;

option java_package = "com.dremio.sabot.exec.store.easy.proto";
option optimize_for = SPEED;

option java_outer_classname = "EasyProtobuf";

import "file.proto";

message EasyDatasetXAttr {
  optional string selection_root = 1;
}

message EasyDatasetSplitXAttr {
  optional string path = 1;
  optional int64 start = 2;
  optional int64 length = 3;
  optional com.dremio.sabot.exec.store.file.proto.FileSystemCachedEntity update_key = 4;
}
